# HaldexSimulator

./: .clang-format  .editorconfig  .gitignore  BUILDING.md  CMakeLists.txt  README.md
scripts/: build.bat  build.sh
src/: main.cpp
src/core/: haldexController.cpp  haldexController.hpp
src/logging/: diagnostics.cpp  diagnostics.hpp  telemetry.cpp  telemetry.hpp
src/types/: canTypes.hpp  configTypes.hpp  controllerState.hpp  physicsTypes.hpp
tests/: CMakeLists.txt
tests/simulation/: frozenSensorTest.cpp
tests/unit/: testLockCalculation.cpp  testSafetyOverrides.cpp  testSignalProcessing.cpp  testStateEstimation.cpp
